--- a/src/main/resources/templates/badrequest-page.html
+++ b/src/main/resources/templates/badrequest-page.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
@@ -8,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>400 Bad Request</title>
+    <title>400 Bad request</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
 
     <!-- Custom stlylesheet -->
-    <link href="../static/css/conferenceError.css" rel="stylesheet" th:href="@{/static/css/conferenceError.css}">
+    <link href="../static/css/conferenceError.css" rel="stylesheet" th:href="@{/css/conferenceError.css}">
 
 
 </head>
