--- a/src/main/resources/templates/forbidden-page.html
+++ b/src/main/resources/templates/forbidden-page.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
@@ -14,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
 
     <!-- Custom stlylesheet -->
-    <link href="../static/css/conferenceError.css" rel="stylesheet" th:href="@{/static/css/conferenceError.css}">
+    <link href="../static/css/conferenceError.css" rel="stylesheet" th:href="@{/css/conferenceError.css}">
 
 
 </head>
