--- a/src/main/resources/templates/stafflogin.html
+++ b/src/main/resources/templates/stafflogin.html
@@ -7,25 +7,27 @@
     <title>StaffLogin</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
-<body class="bg-info">
+<body>
+<div class="container-fluid mx-auto mt-5">
+    <h1 class="text-center">You need to Log in to move forward</h1>
+</div>
 
-<div class="container-fluid mx-auto mt-5 align-middle">
-    <div class="col-md-10 mx-auto text-center">
-        <div th:if="${param.error}">
+<div class="container-fluid mx-auto mt-5 col-sm-4">
+    <div th:if="${param.error}">
             Invalid username and password.
         </div>
         <div th:if="${param.logout}">
             You have been logged out.
         </div>
         <form action="#" th:action="@{'/stafflogin'}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+
+            <div class="form-group"><input class="form-control" type="text" name="username" placeholder="Email"></div>
+            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
+            <div><input type="submit" value="Log In"/></div>
         </form>
-        <div >
-            <a th:href="@{'/staffreg'}">Sign Up</a>
+        <div>
+            <a th:href="@{'/staffreg'}">Register</a>
         </div>
     </div>
-</div>
 </body>
 </html>
