--- a/src/main/resources/templates/staffreg.html
+++ b/src/main/resources/templates/staffreg.html
@@ -4,30 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>StaffLogin</title>
+    <title>Staff Registration</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
-<body class="bg-info">
-<div class="container-fluid mx-auto mt-5 align-middle">
-    <div class="col-md-10 mx-auto text-center">
+<body>
+<div class="container-fluid mx-auto mt-5">
+    <h1 class="text-center">Please, fill out the registration form below</h1>
+</div>
 
-        <div class="col-md-10 d-flex justify-content-center mx-auto ">
+<div class="container-fluid mx-auto mt-5 col-sm-4">
+    <form action="#" th:action="@{'/registration-staff'}" th:object="${staff}" method="POST" >
+                <div class="form-group">
+                <input type="email" th:field="*{email}"  class="form-control" id="exampleInputEmail1" aria-describedby="Email" placeholder="Email">
+                </div>
 
-            <form action="#" th:action="@{'/registration-staff'}" th:object="${staff}" method="POST" class="form-inline py-5 justify-content-center "  style="width: 80%; margin-top: 20%">
+                <div class="form-group"> <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div></div>
+        <div class="form-row">
+        <div class="form-group col-md-6">
+                <input th:field="*{name}" class="form-control" id="exampleInputName" aria-describedby="Name" placeholder="Your Name">
+                </div>
+                <div class="form-group col-md-6">
+                    <input th:field="*{surname}" class="form-control" id="exampleInputSurname" aria-describedby="Surname" placeholder="Your Surname">
 
-
-                <input type="email" th:field="*{email}"  style="width: 60%;" class="form-control px-5 py-4 mr-2" id="exampleInputEmail1" aria-describedby="Email" placeholder="Enter email">
-                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
-                <input th:field="*{name}" style="width: 60%;" class="form-control px-5 py-4 mr-2" id="exampleInputName" aria-describedby="Name" placeholder="Enter name">
-                <input th:field="*{surname}" style="width: 60%;" class="form-control px-5 py-4 mr-2" id="exampleInputSurname" aria-describedby="Surname" placeholder="Enter surname">
-                <input type="password" th:field="*{pass}" style="width: 60%;" class="form-control px-5 py-4 mr-2" id="exampleInputPass" aria-describedby="Password" placeholder="Enter password">
-
+                </div>
+        </div>
+        <div class="form-group">
+                    <input type="password" th:field="*{pass}" class="form-control" id="exampleInputPass" aria-describedby="Password" placeholder="Password">
+                </div>
 
                 <button type="submit" class="btn btn-dark">Login</button>
             </form>
         </div>
-    </div>
-</div>
+<!--    </div>-->
+<!--</div>-->
 
 </body>
 </html>
